# srikanthnaidu1234-Artifical_Intelligence_drone_detect

./: .gitignore  .pre-commit-config.yaml  Dockerfile.prod  pyproject.toml
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/workflows/: docker.yml  ruff.yml
docs/: _quarto.yml  index.ipynb  index.tex
mydetector/: README.md  pyproject.toml
mydetector/src/: dockerfile  pyproject.toml
mydetector/src/mydetector/: __init__.py  drone-detection-Yolo_Pretrained.ipynb  drone_detections.py  drone_tracker.py  youtube_video_downloader.py
mydetector/src/mydetector/downloads/: detections.json
src/: __init__.py  app.py
