[project]
name = "mydetector"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Pantelis Monogioudis", email = "pantelis.monogioudis@aegean.ai" }
]
dependencies = [
    "lancedb>=0.8.2",
    "boto3>=1.34.122",
    "gradio>=4.36.0"
    ]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mydetector"]
