[tool.poetry]
name = "drone-detector"
version = "0.1.0"
description = "A deep learning-based drone detection system for video analysis"
authors = ["Srikanth Naidu <srikanth.dbit04@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0"
pytube = "^15.0.0"
torch = "^2.0.0"
torchvision = "^0.15.0"
ultralytics = "^8.0.0"
filterpy = "^1.4.5"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = "E203, W503"
max-complexity = 10
